Support ongoing loan schedules
